2006-07-07  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/basic/BasicArrowButton.java
	(MAXIMUM_SIZE): Removed field,
	(MINIMUM_SIZE): Likewise,
	(PREFERRED_SIZE): Likewise,
	(getMaximumSize): Return new instance every time,
	(getMinimumSize): Likewise,
	(getPreferredSize): Likewise.

2006-07-07  Roman Kennke  <kennke@aicas.com>

	* java/awt/LightweightDispatcher.java
	(findTarget):  Avoid array copying in
	Container.getComponents().

2006-07-07  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JComponent.java
	(paintChildrenWithOverlap): Avoid array copying in
	Container.getComponents().
	(paintChildrenOptimized): Avoid array copying in
	Container.getComponents().
	(fireAncestorEvent):  Avoid array copying in
	Container.getComponents().
	(findOverlapFreeParent): Avoid array copying in
	Container.getComponents().

2006-07-07  Matt Wringe <mwringe@redhat.com>

	* javax/crypto/spec/PBEKeySpec.java: Updated copyright year.
	(passwordValid): New field.
	(setPassword): New method.
	(setSalt): Likewise.
	(setIterationCount): Likewise.
	(setKeyLength): Likewise.
	(PBEKeySpec(char[])): Use new setter methods.
	(PBEKeySpec(char[], byte[], int)): Likewise.
	(PBEKeySpec(char[], byte[], int, int)): Likewise.
	(clearPassword): Set passwordValid to false.
	(getPassword): Check that clearPassword() was not called earlier.
	Return a clone of the password.
	(getSalt): Return a clone of the salt if it was not null.

2006-07-07  Roman Kennke  <kennke@aicas.com>

	* java/awt/Component.java
	(isValid): Always return false when component is
	not showing.
	(setFont): Always set font, even when setting
	the same or equal font again.

2006-07-07  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/metal/MetalIconFactory.java
	(CheckBoxMenuItemIcon): Implement UIResource,
	(FileChooserDetailViewIcon): Likewise,
	(FileChooserHomeFolderIcon): Likewise,
	(FileChooserListViewIcon): Likewise,
	(FileChooserNewFolderIcon): Likewise,